--- a/app/src/main/res/layout/future_weather_cardview.xml
+++ b/app/src/main/res/layout/future_weather_cardview.xml
@@ -29,7 +29,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            tools:text="1.1.2020"
+            tools:text="01.01.2020"
             />
 
         <TextView
@@ -47,7 +47,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            tools:text="25.0 " />
+            tools:text="25.0 \u2103" />
         <TextView
             android:id="@+id/textView_condition"
             android:layout_width="wrap_content"
