--- a/app/src/main/res/layout/future_list_weather_fragment.xml
+++ b/app/src/main/res/layout/future_list_weather_fragment.xml
@@ -6,6 +6,7 @@
     tools:context=".weather.current.future.list.FutureListWeatherFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
